Update README.md to reflect new settings, update code to refer to new settings